Sutter Health/src/objects/Article_Migration_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Priority__c</fullName>
        <label>Article Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Menu__c</fullName>
        <label>Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Menu__c</fullName>
        <label>Sub Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Migration Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Priority__c</columns>
        <columns>Article_Type__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Keywords__c</columns>
        <columns>Menu__c</columns>
        <columns>Sub_Function__c</columns>
        <columns>Sub_Menu__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Migration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>